# pandos

./: .env.example  .gitignore  CHANGELOG.md  README.md  USER_GUIDE.md  check-style.sh  check-types.sh  pyproject.toml  requirements-build.txt  requirements-develop.txt  tests-coverage.sh  tests-exec.sh
.github/workflows/: build-and-publish.yaml  build-for-testing.yaml  check-style.yaml  check-tests.yaml  check-types.yaml  hello-world.yaml
pandos/: MANIFEST.in  README.md  requirements.txt  setup.py
pandos/src/main/pandos/: cli.py  exceptions.py  maturity.py  settings.py  version.py
pandos/src/main/pandos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pandos/src/main/pandos/futures/: __init__.py  enums.py  future.py  results.py  store.py
pandos/src/main/pandos/monads/: __init__.py  either.py  exceptions.py
pandos/src/main/pandos/serverless/function/: __init__.py  payload.py  serverless_function.py
pandos/src/main/pandos/utils/: custom_enum_types.py  pyobj_serializers.py
pandos/src/tests/test_pandos/: test_cli.py  test_version.py
pandos/src/tests/test_pandos/test_monads/: test_either.py
pandos/src/tests/test_pandos/test_utils/: test_custom_enum_types.py  test_pyobj_serializers.py
src/pandos_core/: LICENSE  requirements.txt  setup.py
src/pandos_core/pandos/: cli.py  version.py
