[build-system]
requires = [
    "wheel==0.41.2",
    "mypy[mypyc]==1.6.1",
    "mypy-extensions==1.0.0",
    "typing_extensions==4.8.0",
    "typed-ast==1.5.5",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
before-build = "python -m pip install -r requirements-build.txt"

[tool.cibuildwheel.config-settings]
--build-option = "--use-mypyc"
